force-app/main/default/objects/Email_Metrics__c/Email_Metrics__c.object-meta.xml
<CustomObject>
    <label>OBS Email Metrics</label>
    <nameField>
        <displayFormat>Email_Metrics-{000000}</displayFormat>
        <label>OBS Email Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OBS Email Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>