force-app/main/default/objects/Email_Metrics__c/fields/Case_Id__c.field-meta.xml
<CustomField><fullName>Case_Id__c</fullName><label>OBS Case</label><referenceTo>Case</referenceTo><relationshipName>CaseMetrics</relationshipName><type>Lookup</type></CustomField>