force-app/main/default/objects/Email_Metrics__c/fields/Email_Count__c.field-meta.xml
<CustomField><fullName>Email_Count__c</fullName><label>OBS Email Count</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>