force-app/main/default/objects/Email_Metrics__c/fields/Processing_Time_ms__c.field-meta.xml
<CustomField><fullName>Processing_Time_ms__c</fullName><label>Processing Time ms</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>