force-app/main/default/objects/Email_Metrics__c/fields/Timestamp__c.field-meta.xml
<CustomField><fullName>Timestamp__c</fullName><label>OBS Timestamp</label><type>DateTime</type></CustomField>