force-app/main/default/objects/Email_Metrics__c/fields/Total_Attachment_Size_MB__c.field-meta.xml
<CustomField><fullName>Total_Attachment_Size_MB__c</fullName><label>Total Attachment Size MB</label><precision>18</precision><scale>2</scale><type>Number</type></CustomField>